--- a/devfile.yaml
+++ b/devfile.yaml
@@ -13,10 +13,10 @@ projects:
 components:
   - type: chePlugin
     reference: >-
-      https://github.com/IBM-Blockchain/blockchain-vscode-extension/releases/download/v1.0.28/ibm-blockchain-platform-che-1.0.29.yaml
+      https://github.com/IBM-Blockchain/blockchain-vscode-extension/releases/download/v1.0.31/ibm-blockchain-platform-che-1.0.32.yaml
     alias: ibm-blockchain-platform
   - endpoints:
-      - name: fablet
+      - name: microfab
         port: 8080
         attributes:
           protocol: http
@@ -26,10 +26,10 @@ components:
     memoryLimit: 1024M
     type: dockerimage
     volumes:
-      - name: fablet
-        containerPath: /opt/fablet/data
-    alias: fablet
-    image: sstone1/fablet
+      - name: microfab
+        containerPath: /opt/microfab/data
+    alias: microfab
+    image: sstone1/microfab
     env:
       - value: |
           {
@@ -51,7 +51,7 @@ components:
               }
             ]
           }
-        name: FABLET_CONFIG
+        name: MICROFAB_CONFIG
   - mountSources: true
     command:
       - tail
